2002-03-28  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* plugins/pax/pax.c (pax_log_processing): 
	* plugins/simple/simple.c (emit_alert): 
	use lml_emit_alert().

	* src/lml-alert.c: 
	new file providing facility for alert emition.
	Every plugin should use theses functions.

	* plugins/simple/simple.c: 

	This is the start of the Simple plugin. This plugin
	have a ruleset, composed of regex, and of information
	to fill in the alert if the regex match.

2002-03-28  Krzysztof Zaraska  <kzaraska@student.uci.agh.edu.pl>

	* plugins/debug/debug.c: revert to including <inttypes.h> instead of
	<stdint.h> for compatibility with FreeBSD 4.x and conformance
	with other Prelude modules. 

2002-03-27  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/hashkey.c (hash_position): 
	cast to unsigned int, lot of cleanup.

	* src/file-server.c (file_server_monitor_file): 
	take an already open FD as argument (so that we don't 
	require root access here).

	* src/udp-server.c (udp_server_start): 
	reader and queue are passed to udp_server_start,
	not udp_server new.

	* src/pconfig.c (pconfig_set): 
	new -u (--user) option. Prelude LML can now run as a
	simple user.

	* src/udp-server.c (udp_server_new): 
	resolve the provided address if any. Else use INADDR_ANY.

	* src/pconfig.c (pconfig_set): 
	add configuration hook for enabling the UDP server,
	setting server address, setting server port.

	* src/main.c (sig_handler): 
	only call udp_server_close if an UDP server is active.

	(main): only start the UDP server if the user want it.

	* prelude-lml.conf.in: 
	Update default configuration file.

2002-03-26  Yoann Vandoorselaere  <yoann@mandrakesoft.com>

	* src/regex.c: 
	* src/main.c:
	more cleanup, performance fix.

	* src/regex.c (regex_destroy): 
	use list_for_each_safe

	* src/file-server.c: 
	monitor local files.

	* src/server-logic.c: 
	used by file-server implementation.

	* src/pconfig.c: 
	(pconfig_set): add the --file option.

	* src/main.c: 
	* src/queue.c: 